--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 actix = "0.8"
 actix-web = "1.0.5"
-diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
+diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
 dotenv = "0.14.1"
 dotenv_codegen="0.14.1"
 serde = "1.0"
@@ -23,4 +23,4 @@ log = "0.4.7"
 actix-http = "0.2.7"
 actix-identity = "0.1.0"
 actix-cors = "0.1.0"
-diesel_full_text_search = "1.0.1"
+uuid = { version = "0.7", features = ["serde", "v4"] }
